Bug 1774155 - Avoid copying data URI specs in deprecation warning. r=mccr8, a=RyanVM

Differential Revision: https://phabricator.services.mozilla.com/D154692